--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<html>
- <body>
-    <h1> Teste <h1>
- </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Calculadora</title>
+</head>
+<body>
+    <h1>Caluladora</h1>
+</body>
 </html>
